# infographics_for_the_display

./: LICENSE  README.md  hello.py  main.py  pyproject.toml  s.docx  s_with_dot.docx  test.py  w.docx  w_with_dot.docx
output/: 7-1024x600-600-PCAP.docx  7-800x600-600-PCAP.docx
templates/: s.docx  s_with_dot.docx  w.docx  w_with_dot.docx
