[tool.poetry]
name = "belka-image-display"
version = "0.1.0"
description = ""
authors = ["Roman Paltsev <roman.palcev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.24.11"
docxtpl = "^0.18.0"
docx2pdf = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
