[project]
name = "infographics-for-the-display"
version = "0.1.0"
description = "Add your description here"
authors = [
{ name = "Roman Paltsev", email = "oman.palcev@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "docxtpl>=0.19.1",
    "openpyxl>=3.1.5",
    "pymupdf>=1.25.1",
]
